# rss-feed-lab

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy.ini  setup.cfg
db/init/: 0_tables.sql  1_inserts.sql
env/: app.env.template
rss_feed_lab/: __main__.py  constants.py
rss_feed_lab/data/: utils.py
rss_feed_lab/handlers/: feeds.py
rss_feed_lab/models/: base.py  feeds.py
