[metadata]
name = rss_feed_lab
version = attr: rss_feed_lab.__version__
author = Vinicius Souza
author_email = vinicius.cp.souza@gmail.com
description = Experimental RSS feed API
long_description = file: README.md
keywords = async, rss
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.12
install_requires =
    aiohttp[speedups] ~= 3.9.5
    asyncmy ~= 0.2.9
    cryptography ~= 43.0.0
    beautifulsoup4 ~= 4.8.1
    SQLAlchemy ~= 2.0.31
    Tornado ~= 6.4.1

[options.extras_require]
dev = 
    mypy ~= 1.10.1
    setuptools ~= 70.3.0
    types-setuptools ~= 70.3.0
